--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>Is it true?</h1>
     <img width="300" src="img/girl-at-the-table.jpg" alt="Girls who sitting at the modern table">
     <h2>Yes, its real!</h2>
+    <h3>Yes you can do it!</h3>
+    <img src="img/wooden-block.jpg" alt="Wooden block which created by me">
 </body>
 </html>
