--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>Yes, its real!</h2>
     <h3>Yes you can do it!</h3>
     <img src="img/wooden-block.jpg" alt="Wooden block which created by me">
+    <img src="img/design-of-room.jpg" alt="Modern design of apartment in New York">
 </body>
 </html>
